Bug 305247 - Misrenderings in conjuction with transparency
Summary: Misrenderings in conjuction with transparency
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: 4.9.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://gitorious.org/colibri
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-16 09:07 UTC by markuss
Modified: 2021-11-17 18:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.89
Sentry Crash Report:


Attachments
Screenshot of the bug (69.44 KB, image/png)
2012-08-16 09:09 UTC, markuss
Details
Script to trigger the bug (1.64 KB, application/x-shellscript)
2012-08-16 09:10 UTC, markuss
Details

Note You need to log in before you can comment on or make changes to this bug.
Description markuss 2012-08-16 09:07:12 UTC
KWin 4.9.0 caused a regression in conjuction with transparency. (I can rule out a driver regression because that stayed the same.)

It's easiest to spot using Colibri as notification system.
Screenshot displaying the bug and script triggering the bug will be attached.

Reproducible: Always

Steps to Reproduce:
Disable Plasma notifications.
Install and run Colibri
Execute attached script trigger.sh
Be sure the notifications cover parts of the systray
Actual Results:  
Fade-in of notifications flickers.

If they cover the systray, systray tooltips cause blockish bright misrenderings, especially when the mouse cursor is moved between a StatusItem-capable trayicon outside the notification and another StatusItem-capable trayicon under the notification.

Fade-out flickers as well.
Comment 1 markuss 2012-08-16 09:09:30 UTC
Created attachment 73229 [details]
Screenshot of the bug

Add Screenshot of the bug
Comment 2 markuss 2012-08-16 09:10:54 UTC
Created attachment 73230 [details]
Script to trigger the bug

Attach the trigger.sh script. It's just a bunch of notify-send calls.
Comment 3 Martin Flöser 2012-08-16 10:01:56 UTC
is there another way to trigger the bug except colibri? Please also provide the output of

qdbus org.kde.kwin /KWin supportInformation

when the issue is visible
Comment 4 Thomas Lübking 2012-08-16 10:59:01 UTC
The blurred outline is because the window sets a wrong blur region (likely just blurs the all of it) and i guess that alongside some stacked resizes leads to this issue, ie. there's no blur texture painted under the notifications on repaints - also the blur cache in the lower right (over the panel) seems too bright.
Comment 5 markuss 2012-08-16 13:27:06 UTC
(In reply to comment #3)
> is there another way to trigger the bug except colibri?
I'm pretty sure I've seen cases of weird rendering after updating to 4.9 but this was the first time I had time to look into reproducing the bug.
The blurred outline is visible on all Plasma-themed tooltips.

As Thomas suggested, the bright blocks are not visible when disabling blur.

As for the flickering: Yes, that appears during resizes. It's less visible when turning V-Sync off but still there. Should I open a separate bug for that? As it has nothing to do with blur, it's probably unrelated and I was just tricked into believing flicker and bright blocks are related.

> Please also provide
> the output of
> 
> qdbus org.kde.kwin /KWin supportInformation
> 
> when the issue is visible

Options
=======
focusPolicy: 0
nextFocusPrefersMouse: false
clickRaise: true
autoRaise: false
autoRaiseInterval: 0
delayFocusInterval: 0
shadeHover: false
shadeHoverInterval: 250
tiling: false
tilingLayout: 0
tilingRaisePolicy: 0
separateScreenFocus: false
activeMouseScreen: false
placement: 4
focusPolicyIsReasonable: true
borderSnapZone: 10
windowSnapZone: 10
centerSnapZone: 0
snapOnlyWhenOverlapping: false
showDesktopIsMinimizeAll: false
rollOverDesktops: true
focusStealingPreventionLevel: 1
legacyFullscreenSupport: false
operationTitlebarDblClick: 
commandActiveTitlebar1: 0
commandActiveTitlebar2: 30
commandActiveTitlebar3: 2
commandInactiveTitlebar1: 4
commandInactiveTitlebar2: 30
commandInactiveTitlebar3: 2
commandWindow1: 7
commandWindow2: 8
commandWindow3: 8
commandWindowWheel: 31
commandAll1: 10
commandAll2: 3
commandAll3: 14
keyCmdAllModKey: 16777251
showGeometryTip: false
electricBorders: false
electricBorderDelay: 150
electricBorderCooldown: 350
electricBorderPushbackPixels: 1
electricBorderMaximize: false
electricBorderTiling: false
borderlessMaximizedWindows: false
killPingTimeout: 5000
hideUtilityWindowsForInactive: true
inactiveTabsSkipTaskbar: false
autogroupSimilarWindows: false
autogroupInForeground: true
compositingMode: 1
useCompositing: true
compositingInitialized: true
hiddenPreviews: 1
unredirectFullscreen: false
glSmoothScale: 2
glVSync: true
xrenderSmoothScale: false
maxFpsInterval: 17
refreshRate: 0
vBlankTime: 6144
glDirect: true
glStrictBinding: false
glStrictBindingFollowsDriver: true

Compositing
===========
Qt Graphics System: raster
Compositing is active
Compositing Type: OpenGL
OpenGL vendor string: NVIDIA Corporation
OpenGL renderer string: GeForce 9200M GS/PCIe/SSE2
OpenGL version string: 3.3.0 NVIDIA 295.49
Driver: NVIDIA
Driver version: 295.49
GPU class: G80/G90
OpenGL version: 3.3
X server version: 1.10.4
Linux kernel version: 3.1.10
Direct rendering: yes
Requires strict binding: no
GLSL shaders:  yes
Texture NPOT support:  yes
OpenGL 2 Shaders are used

Loaded Effects:
---------------
kwin4_effect_login
kwin4_effect_coverswitch
kwin4_effect_translucency
kwin4_effect_screenshot
kwin4_effect_desktopgrid
kwin4_effect_diminactive
kwin4_effect_magiclamp
kwin4_effect_fade
kwin4_effect_dialogparent
kwin4_effect_highlightwindow
kwin4_effect_taskbarthumbnail
kwin4_effect_presentwindows
kwin4_effect_blur
kwin4_effect_logout
kwin4_effect_dashboard
kwin4_effect_outline

Currently Active Effects:
-------------------------
kwin4_effect_translucency
kwin4_effect_diminactive
kwin4_effect_blur
Comment 6 Martin Flöser 2015-01-13 11:57:07 UTC
I'm wondering whether this might be a duplicate of bug #307112
Comment 7 Thomas Lübking 2015-01-13 13:50:29 UTC
Likely, but given the description, It rather won't be fixed by omitting the cache for Deleted.
Comment 8 Justin Zobel 2021-03-10 00:12:32 UTC
Thank you for the bug report.

As this report hasn't seen any changes in 5 years or more, we ask if you can please confirm that the issue still persists.

If this bug is no longer persisting or relevant please change the status to resolved.
Comment 9 Bug Janitor Service 2021-11-10 10:48:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwayland-integration/-/merge_requests/15
Comment 10 Bug Janitor Service 2021-11-16 10:10:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/381
Comment 11 Marco Martin 2021-11-16 10:14:50 UTC
Git commit 6176d8ef8f36290075c5bd8932d623e68468a1cd by Marco Martin.
Committed on 16/11/2021 at 10:12.
Pushed by mart into branch 'master'.

Do updateTheme after QQuickWindow::event

doing updatetheme there will ensure that the window size is correct,
so then when the surface commit will happen, we'll have the blur
and contrast regions wit hthe proper geometry

M  +2    -0    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/6176d8ef8f36290075c5bd8932d623e68468a1cd