explicitly commit the surface after committing the blur

after committing the blur, the surface on server side gets the correct new blur as "pending"
but then the surface itself doesn't get committed to make the pending, the current
BUG:305247